--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <thead>
                     <tr>
                         <td>
-                            <img src="https://github.com/KSIVASAIKIRAN/New_Demo/tree/master/imagesg">
+                            <img src="https://github.com/KSIVASAIKIRAN/New_Demo/tree/master/imagesg.png">
                         </td>
                         <td>
                             <img src="D:\abc\images\img2.jpg">
