--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <thead>
                     <tr>
                         <td>
-                            <img src="New_Demo\images\img1.jpg">
+                            <img src="https://images.app.goo.gl/sJUPAwNs6WSDcNes5">
                         </td>
                         <td>
                             <img src="D:\abc\images\img2.jpg">
