--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                             <img src="https://media.istockphoto.com/id/157482029/photo/stack-of-books.jpg?s=1024x1024&w=is&k=20&c=iQdICOnz_UmfAiFuY3d3LQe1B9cYHI3UwjTPNKBOlow=">
                         </td>
                         <td>
-                            <img src="D:\abc\images\img2.jpg">
+                            <img src="images/img1.jpg">
                         </td>
                     </tr>
                     <tr>
