--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
                 <thead>
                     <tr>
                         <td>
-                            <img src="https://media.istockphoto.com/id/157482029/photo/stack-of-books.jpg?s=1024x1024&w=is&k=20&c=iQdICOnz_UmfAiFuY3d3LQe1B9cYHI3UwjTPNKBOlow=">
+                            <img src="images/img1.jpg">
                         </td>
                         <td>
-                            <img src="images/img1.jpg">
+                            <img src="images/img2.jpg">
                         </td>
                     </tr>
                     <tr>
@@ -45,16 +45,16 @@
             <table class="c">
                 <tr>
                     <td>
-                        <img src="D:\abc\images\img3.jfif">
+                        <img src="images/img3.jfif">
                     </td>
                     <td>
-                        <img src="D:\abc\images\img4.jpg">
+                        <img src="images/img4.jpg">
                     </td>
                     <td>
-                        <img src="D:\abc\images\img5.avif">
+                        <img src="images/img5.avif">
                     </td>
                     <td>
-                         <img src="D:\abc\images\img6.avif">
+                         <img src="images/img6.avif">
                     </td>
                 </tr>
                 <tr>
