--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     </head>
     <body>
         <nav class="main-nav"> 
-            <a href="#" class="active">Home</a>
+            <a href="https://ksivasaikiran.github.io/New_Demo/" class="active">Home</a>
                 <a href="#">Burgers</a>
                     <a href="#">Fries</a>
                     <a href="#">Greens</a>
